feat: Criação pagina principal e inserção de propriedades no normalize

--- a/index.html
+++ b/index.html
@@ -7,9 +7,20 @@
     <link rel="stylesheet" href="root.css">
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Lista de Páginas</title>
 </head>
 <body>
-    <h1 class="teste">APAGAR ESSE TEXTO DEPOIS</h1>
+    <main>
+        <h1>Lista de Paginas</h1>
+
+        <section>
+            <nav>
+                <ul>
+                    <li><a href="">DISPLAY BLOCK</a></li>
+                    <li><a href="">DISPLAY FLEX</a></li>
+                </ul>
+            </nav>
+        </section>
+    </main>
 </body>
 </html>
