feat: Adição das propriedades no style da pagina principal

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 </head>
 <body>
     <main>
-        <h1>Lista de Paginas</h1>
+        <h1 class="h1">Lista de Paginas</h1>
 
         <section>
             <nav>
                 <ul>
-                    <li><a href="">DISPLAY BLOCK</a></li>
-                    <li><a href="">DISPLAY FLEX</a></li>
+                    <li><a class="texto" href="">DISPLAY BLOCK</a></li>
+                    <li><a class="texto1" href="">DISPLAY FLEX</a></li>
                 </ul>
             </nav>
         </section>
