feat: Cor no texto

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section>
             <nav>
                 <ul>
-                    <li><a class="texto" href="">DISPLAY BLOCK</a></li>
+                    <li><a class="texto" href="./DisplayBlock/index.html">DISPLAY BLOCK</a></li>
                     <li><a class="texto1" href="">DISPLAY FLEX</a></li>
                 </ul>
             </nav>
